# uv-tidy

./: README.md  pyproject.toml  run_tests.sh
tests/: conftest.py  test_cli.py  test_core.py  test_rules.py  test_utils.py
tests/fixtures/: __init__.py  helpers.py  mock_venvs.py
tests/fixtures/sample_data/: large_venv_structure.json
tests/fixtures/sample_data/custom_configs/: test_config.json
uv_tidy/: __init__.py  cli.py  core.py  rules.py  utils.py
