[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uv_tidy"]

[project]
name = "uv-tidy"
version = "0.1.0"
description = "simple CLI tool for cleaning up unused uv virtual environments"
readme = "README.md"
authors = [
    {name = "Fred Bliss"}
]
license = {text = "Apache 2.0"}

requires-python = ">=3.9"
dependencies = [
    "structlog>=21.1.0",
]

[project.urls]
Homepage = "https://github.com/fblissjr/uv-tidy"
Issues = "https://github.com/fblissjr/uv-tidy/issues"

[project.scripts]
uv-tidy = "uv_tidy.cli:main"